force-app/main/default/objects/Opportunity/fields/Account_Type_When_Opp_Created__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_When_Opp_Created__c</fullName>
    <label>Account Type When Opp Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Type</valueSetName>
    </valueSet>
</CustomField>