force-app/main/default/objects/Opportunity/fields/Acct_Has_Won_Opp_Starting_After__c.field-meta.xml
<CustomField>
    <fullName>Acct_Has_Won_Opp_Starting_After__c</fullName>
    <formula>Account.Max_Won_Subscription_Start_Date__c &gt; Subscription_End_Date__c</formula>
    <label>Acct Has Won Opp Starting After</label>
    <type>Checkbox</type>
</CustomField>