force-app/main/default/objects/Opportunity/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>This would be used by Enterprise Services Team</description>
    <inlineHelpText>For ES Team use only</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>