force-app/main/default/objects/Opportunity/fields/Activation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_End_Date__c</fullName>
    <formula>ADDMONTHS(Tentative_Activation_Date__c,VALUE(of_Months_for_Subs_Activation__c))-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tentative Activation Date + Number of Months for Subs Activation. This is the end date of the invoice period accounting will use.</inlineHelpText>
    <label>Activation End Date</label>
    <type>Date</type>
</CustomField>