force-app/main/default/objects/Opportunity/fields/Active_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Active_Oppty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ActiveOppty</label>
    <type>Checkbox</type>
</CustomField>