force-app/main/default/objects/Opportunity/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <label>Additional Info</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>