force-app/main/default/objects/Opportunity/fields/Address_Info__c.field-meta.xml
<CustomField>
    <fullName>Address_Info__c</fullName>
    <label>Address Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>