force-app/main/default/objects/Opportunity/fields/Age_del__c.field-meta.xml
<CustomField>
    <fullName>Age_del__c</fullName>
    <formula>TODAY()  -   DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>