force-app/main/default/objects/Opportunity/fields/ALM__c.field-meta.xml
<CustomField>
    <fullName>ALM__c</fullName>
    <label>ALM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>VersionOne</fullName>
            </value>
            <value>
                <fullName>Azure Boards (VSTS)</fullName>
            </value>
            <value>
                <fullName>IBMRTC</fullName>
            </value>
            <value>
                <fullName>CA Agile (Rally)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>