force-app/main/default/objects/Opportunity/fields/Any_commitments_from_AR__c.field-meta.xml
<CustomField>
    <fullName>Any_commitments_from_AR__c</fullName>
    <inlineHelpText>Mandate field to update any comments for Engineering/ CS team</inlineHelpText>
    <label>Any special commitments from AR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>