force-app/main/default/objects/Opportunity/fields/AR_Implementation_Engineer__c.field-meta.xml
<CustomField>
    <fullName>AR_Implementation_Engineer__c</fullName>
    <label>Implementation Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abhilash</fullName>
            </value>
            <value>
                <fullName>Abhinav</fullName>
            </value>
            <value>
                <fullName>Ashwin</fullName>
            </value>
            <value>
                <fullName>Lavanya</fullName>
            </value>
            <value>
                <fullName>Vignesh</fullName>
            </value>
            <value>
                <fullName>Salma</fullName>
            </value>
            <value>
                <fullName>Simon</fullName>
            </value>
            <value>
                <fullName>Niranjan</fullName>
            </value>
            <value>
                <fullName>Teja</fullName>
            </value>
            <value>
                <fullName>Prashanth</fullName>
            </value>
            <value>
                <fullName>Chris</fullName>
            </value>
            <value>
                <fullName>Naveen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>