force-app/main/default/objects/Opportunity/fields/ARR_Last_Full_Month_of_Opp__c.field-meta.xml
<CustomField>
    <fullName>ARR_Last_Full_Month_of_Opp__c</fullName>
    <description>ARR Last Full Month of Opp</description>
    <inlineHelpText>ARR Last Full Month of Opp</inlineHelpText>
    <label>ARR Renewable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>