force-app/main/default/objects/Opportunity/fields/AUD_and_Tax_Checked__c.field-meta.xml
<CustomField>
    <fullName>AUD_and_Tax_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Australian Companies must pay tax. And must be given the opportunity to pay in AUD. Check this box to confirm that process has been done</inlineHelpText>
    <label>AUD and Tax Checked</label>
    <type>Checkbox</type>
</CustomField>