force-app/main/default/objects/Opportunity/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <formula>Account.MSA_Auto_Renew__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>