force-app/main/default/objects/Opportunity/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <formula>Account.BillingCountry</formula>
    <inlineHelpText>Account Billing Country</inlineHelpText>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>