force-app/main/default/objects/Opportunity/fields/Business_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_ID__c</fullName>
    <formula>Contact_Name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Contact ID</label>
    <type>Text</type>
</CustomField>