force-app/main/default/objects/Opportunity/fields/casesafeid__c.field-meta.xml
<CustomField>
    <fullName>casesafeid__c</fullName>
    <label>casesafeid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>