force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <inlineHelpText>Who will sell on you behalf?</inlineHelpText>
    <label>Champion:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>