force-app/main/default/objects/Opportunity/fields/Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Month__c</fullName>
    <formula>CASE(MONTH(CloseDate), 1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;,  4, &quot;Apr&quot;,  5, &quot;May&quot;,  6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;, &quot;None&quot;)&amp; &quot; &apos; &quot; &amp; TEXT(YEAR(CloseDate))</formula>
    <label>Close Month</label>
    <type>Text</type>
</CustomField>