force-app/main/default/objects/Opportunity/fields/Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Close_Quarter__c</fullName>
    <formula>If(MONTH(CloseDate)&lt;4,&quot;Q1&quot;,
IF(MONTH(CloseDate)&lt;7,&quot;Q2&quot;,
IF(MONTH(CloseDate)&lt;10,&quot;Q3&quot;,&quot;Q4&quot;)))</formula>
    <label>Close Quarter</label>
    <type>Text</type>
</CustomField>