force-app/main/default/objects/Opportunity/fields/Cloud_Organization__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud Organization</label>
    <referenceTo>CodeScan_Organization__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>