force-app/main/default/objects/Opportunity/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copado</fullName>
            </value>
            <value>
                <fullName>Flosum</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>Jenkins</fullName>
            </value>
            <value>
                <fullName>Atlassian - Bamboo</fullName>
                <label>Bamboo</label>
            </value>
            <value>
                <fullName>Dream factory – Snapshot</fullName>
                <label>Snapshot</label>
            </value>
            <value>
                <fullName>Jitterbit</fullName>
            </value>
            <value>
                <fullName>Odaseva</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>Provar</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>OwnBackup</fullName>
            </value>
            <value>
                <fullName>GRAX</fullName>
            </value>
            <value>
                <fullName>Capstorm</fullName>
            </value>
            <value>
                <fullName>Clayton</fullName>
            </value>
            <value>
                <fullName>PMD</fullName>
            </value>
            <value>
                <fullName>SonarQube</fullName>
            </value>
            <value>
                <fullName>Codacy</fullName>
            </value>
            <value>
                <fullName>Checkmarx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>