force-app/main/default/objects/Opportunity/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Business Contact)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>