force-app/main/default/objects/Opportunity/fields/Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period__c</fullName>
    <formula>Contract_End_Date__c -  Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No of days between Contract Start Date and Contract End Date.</inlineHelpText>
    <label>Contract Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>