force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <inlineHelpText>Contract Start Date = Subs Activation Date</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>