force-app/main/default/objects/Opportunity/fields/Contract_Start_Date_custom__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_custom__c</fullName>
    <formula>CASE( MONTH(  Contract_Start_Date__c ) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;,&quot; &quot;) +&apos;-&apos;+text(DAY(  Contract_Start_Date__c ))+&apos;-&apos;+ Text(YEAR(  Contract_Start_Date__c ))</formula>
    <label>Contract Start Date(custom)</label>
    <type>Text</type>
</CustomField>