force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Contract</fullName>
                <default>true</default>
                <label>Annual Contract</label>
            </value>
            <value>
                <fullName>Co-Term Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>