force-app/main/default/objects/Opportunity/fields/Conversion_Time__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Time__c</fullName>
    <formula>(CloseDate -  DATEVALUE(CreatedDate))/30.42</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Time(Create - Close) in Mths</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>