force-app/main/default/objects/Opportunity/fields/Created_Date1__c.field-meta.xml
<CustomField>
    <fullName>Created_Date1__c</fullName>
    <formula>if(Month(DATEVALUE(CreatedDate))&gt;9,&apos;Q4&apos;,(if(Month(DATEVALUE(CreatedDate))&gt;6,&apos;Q3&apos;,(if(Month(DATEVALUE(CreatedDate))&gt;3,&apos;Q2&apos;,&apos;Q1&apos;)))))</formula>
    <inlineHelpText>Created Date as Fiscal Quarter (Q1, Q2, Q3, Q4)</inlineHelpText>
    <label>Created Date as FQ</label>
    <type>Text</type>
</CustomField>