force-app/main/default/objects/Opportunity/fields/Created_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_Month__c</fullName>
    <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 1, &quot;1&quot;, 2, &quot;2&quot;, 3, &quot;3&quot;, 4, &quot;4&quot;, 5, &quot;5&quot;, 6, &quot;6&quot;, 7, &quot;7&quot;, 8, &quot;8&quot;, 9, &quot;9&quot;, 10, &quot;10&quot;, 11, &quot;11&quot;, 12, &quot;12&quot;, &quot;None&quot;)</formula>
    <label>Created Month</label>
    <type>Text</type>
</CustomField>