force-app/main/default/objects/Opportunity/fields/Created_Month_as_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Month_as_Date__c</fullName>
    <description>Date of first day of month when opportunity was created</description>
    <formula>DATEVALUE(CreatedDate)  - DAY(DATEVALUE(CreatedDate)) + 1</formula>
    <label>Created Month as Date</label>
    <type>Date</type>
</CustomField>