force-app/main/default/objects/Opportunity/fields/Current_Subs__c.field-meta.xml
<CustomField>
    <fullName>Current_Subs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Please update this column with count of previous licenses, which would calculate the upsell/ renewal subs from the current opportunity</inlineHelpText>
    <label>Current Subs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>