force-app/main/default/objects/Opportunity/fields/Current_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscriptions__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Existing License Count</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>