force-app/main/default/objects/Opportunity/fields/Current_Work__c.field-meta.xml
<CustomField>
    <fullName>Current_Work__c</fullName>
    <description>Mention the tasks worked on this week</description>
    <inlineHelpText>Mention the tasks worked on this week</inlineHelpText>
    <label>Current Work</label>
    <length>200</length>
    <type>Text</type>
</CustomField>