force-app/main/default/objects/Opportunity/fields/Custom_Close_date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Close_date__c</fullName>
    <description>Customized close date field which can display date in the format DD-MM-YYYY</description>
    <formula>CASE( MONTH(  CloseDate ) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
&quot;Dec&quot;) +&apos;-&apos;+text(DAY(  CloseDate ))+&apos;-&apos;+ Text(YEAR(  CloseDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customized close date field which can display date in the format DD-MM-YYYY</inlineHelpText>
    <label>Custom Close date</label>
    <type>Text</type>
</CustomField>