force-app/main/default/objects/Opportunity/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <formula>Account.Customer_group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Group</label>
    <type>Text</type>
</CustomField>