force-app/main/default/objects/Opportunity/fields/Customer_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onboarding__c</fullName>
    <label>Customer Onboarding State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT Infrastructure Readiness</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>