force-app/main/default/objects/Opportunity/fields/Customer_Type_Active_Churn__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Active_Churn__c</fullName>
    <formula>Account.Customer_Status__c</formula>
    <label>Customer Type (Active/Churn)</label>
    <type>Text</type>
</CustomField>