force-app/main/default/objects/Opportunity/fields/Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time__c</fullName>
    <formula>(CloseDate - DC_Completed_Date__c)/30.42</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Time(DC - Close) in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>