force-app/main/default/objects/Opportunity/fields/Cycle_Time_DC_Close_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time_DC_Close_in_Days__c</fullName>
    <formula>CloseDate - DC_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Time(DC - Close) in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>