force-app/main/default/objects/Opportunity/fields/Data_Storage__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage__c</fullName>
    <label>Data Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>