force-app/main/default/objects/Opportunity/fields/days_in_Playground__c.field-meta.xml
<CustomField>
    <fullName>days_in_Playground__c</fullName>
    <description>days_in_Playground</description>
    <label># of days in Playground</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>