force-app/main/default/objects/Opportunity/fields/Days_Opportunity_Created_for_CI_CD__c.field-meta.xml
<CustomField>
    <fullName>Days_Opportunity_Created_for_CI_CD__c</fullName>
    <formula>ABS(DC_Completed_Date__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Opportunity Created for CI/CD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>