force-app/main/default/objects/Opportunity/fields/Days_Opportunity_Created_for_Vault__c.field-meta.xml
<CustomField>
    <fullName>Days_Opportunity_Created_for_Vault__c</fullName>
    <formula>ABS( DC_Completed_Date_Vault__c - DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Opportunity Created for Vault</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>