force-app/main/default/objects/Opportunity/fields/Days_since_Started__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Started__c</fullName>
    <formula>TODAY()- Implementation_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No. of days between the &apos;Implementation Start Date&apos; and the current date.</inlineHelpText>
    <label>Days since Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>