force-app/main/default/objects/Opportunity/fields/Days_to_Subscription_End__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Subscription_End__c</fullName>
    <formula>Subscription_End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Subscription End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>