force-app/main/default/objects/Opportunity/fields/DC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>DC_Completed_Date__c</fullName>
    <description>Discovery Completed Date</description>
    <label>DC Completed Date (CI/CD)</label>
    <type>Date</type>
</CustomField>