force-app/main/default/objects/Opportunity/fields/DC_Completed_Date_Vault__c.field-meta.xml
<CustomField>
    <fullName>DC_Completed_Date_Vault__c</fullName>
    <label>DC Completed Date (Vault)</label>
    <type>Date</type>
</CustomField>