force-app/main/default/objects/Opportunity/fields/DC_Scheduled_Date_Vault__c.field-meta.xml
<CustomField>
    <fullName>DC_Scheduled_Date_Vault__c</fullName>
    <label>DC Scheduled For (Vault)</label>
    <type>Date</type>
</CustomField>