force-app/main/default/objects/Opportunity/fields/DC_Scheduled_On_CI_CD__c.field-meta.xml
<CustomField>
    <fullName>DC_Scheduled_On_CI_CD__c</fullName>
    <label>DC Scheduled On (CI/CD)</label>
    <type>Date</type>
</CustomField>