force-app/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <inlineHelpText>What are their technical, vendor, and financial criteria?</inlineHelpText>
    <label>Decision Criteria:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>