force-app/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <inlineHelpText>The what happens? Define validation and approval?</inlineHelpText>
    <label>Decision Process:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>