force-app/main/default/objects/Opportunity/fields/Dedicated_Foundation_Items__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Foundation_Items__c</fullName>
    <description>Summed quantity of products with family Dedicated Foundation.</description>
    <label>Dedicated Foundation Items</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductFamily__c</field>
        <operation>equals</operation>
        <value>Dedicated Foundation</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>