force-app/main/default/objects/Opportunity/fields/Demo_Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Performed_Date__c</fullName>
    <description>Demo Performed Date</description>
    <label>Demo Performed Date (CI/CD)</label>
    <type>Date</type>
</CustomField>