force-app/main/default/objects/Opportunity/fields/Demo_Performed_Date_Vault__c.field-meta.xml
<CustomField>
    <fullName>Demo_Performed_Date_Vault__c</fullName>
    <label>Demo Performed Date (Vault)</label>
    <type>Date</type>
</CustomField>