force-app/main/default/objects/Opportunity/fields/Demo_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Date__c</fullName>
    <description>Demo Scheduled Date</description>
    <label>Demo Scheduled Date (CI/CD)</label>
    <type>Date</type>
</CustomField>