force-app/main/default/objects/Opportunity/fields/Direct_Sales_NewLogo_Upsell_ACV_Amount__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sales_NewLogo_Upsell_ACV_Amount__c</fullName>
    <inlineHelpText>We are using this to forecast New Logo or Upsell ACV/ARR amount.</inlineHelpText>
    <label>Direct Sales NewLogo/Upsell ACV Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>