force-app/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Use this field to capture any discounts given to the client. Entering a value in this field will automatically update the amounts field.</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>