force-app/main/default/objects/Opportunity/fields/Downsell_Subs__c.field-meta.xml
<CustomField>
    <fullName>Downsell_Subs__c</fullName>
    <formula>IF(INCLUDES(Opportunity_Type_New_Renewal_Upsell__c ,&quot;Downsell&quot;),
(Number_of_Product_Subscriptions__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It&apos;s a formulae Field where it picks up the No. of Product Subscriptions from current opportunity line item</inlineHelpText>
    <label>Downsell Subs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>