force-app/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <inlineHelpText>Who has profit and loss responsibilitity for this?</inlineHelpText>
    <label>Economic Buyer:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>