force-app/main/default/objects/Opportunity/fields/Has_Had_Demo__c.field-meta.xml
<CustomField>
    <fullName>Has_Had_Demo__c</fullName>
    <description>A date denoting when the customer was given a demo by a product specialist.</description>
    <label>Has Had Demo</label>
    <type>Date</type>
</CustomField>