force-app/main/default/objects/Opportunity/fields/HelperCheckbox__c.field-meta.xml
<CustomField>
    <fullName>HelperCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this box is used restrict the email  if the opportunity has already closed won then this field will be true</description>
    <label>HelperCheckbox</label>
    <type>Checkbox</type>
</CustomField>